--- a/slide/slide-ququ-beforeafterinsert.html
+++ b/slide/slide-ququ-beforeafterinsert.html
@@ -15,7 +15,7 @@ li{list-style: none;}
 	background: url(http://p4.qhimg.com/t019e2a9cd907f487f9.png);width: 35px;height: 35px;  }
 .le-hint:after {z-index: 2;top: 0;left: 0;width: 100%;height: 100%;content: '';background: rgba(0,0,0,.3) url(http://p5.qhimg.com/d/_hao360/video/bgimg/btn.png) no-repeat center;cursor: pointer;visibility: visible;
 }
-.btn-prev, .btn-next {position: absolute;top: 75px;width: 40px;height: 80px;z-index: 2;}
+.btn-prev, .btn-next {position: absolute;top: 75px;width: 40px;height: 80px;z-index: 2;display: none;}
 .btn-prev {left: 0;background: url(http://p6.qhimg.com/t01e88b60b84029bc96.png) no-repeat;}
 .btn-next {right: 0;background: url(http://p0.qhimg.com/t01cb2048b287b1668f.png) no-repeat;}
 .list{position: absolute;top: 255px;left: 0;background-color: #4c4c4c;width: 1000px;height: 20px;}
@@ -75,15 +75,18 @@ li{list-style: none;}
 
 
 	<script src="http://s0.qhimg.com/lib/jquery/1102.js"></script>
-	<script type="text/javascript" src="jquery-sliders-myself-1.4.js"></script>
+	<script type="text/javascript" src="jquery-sliders-myself-1.5.js"></script>
 
 	<script>
-	var wraper = $('#focus-bar-box'),
+	var wraper = $('#focus-bar-wraper'),
+		wraperUl = $('#focus-bar-box'),
 		next_btn = $('#focus-next'),
 		next_prev = $('#focus-prev'),
 		ul_content = $('#focus-bar'),
 		ul_navList = $('#focus-change');
-	var elSlide = new Slide(wraper, next_btn, next_prev, ul_content, ul_navList,{firstShow: 4});
+	var elSlide = new Slide(wraperUl, next_btn, next_prev, ul_content, ul_navList,wraper, {
+		fouseNum: 4
+	});
 	elSlide.init();
 	</script>
 </body>
